--- a/index.html
+++ b/index.html
@@ -1,2 +1,12 @@
-<p> coming soon </p>
-<link rel="icon" type="image/x-icon" href="https://github.com/COANews/COANews.github.io/blob/004c57bc1e17c13d7427ae522a7de74efd7a1d20/2wRp0n5M_400x400.jpg>
+<!DOCTYPE html>
+<html>
+<head>
+  <title>COA News</title>
+  <link rel="icon" type="image/x-icon" href="/images/favicon.ico">
+</head>
+<body>
+
+<p>Stories Coming Soon</p>
+
+</body>
+</html>
