--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <title>COA News</title>
-  <link rel="icon" type="image/x-icon" href="https://raw.githubusercontent.com/COANews/COANews.github.io/main/2wRp0n5M_400x400.jpg">
+  <link rel="icon" type="image/x-icon" href="https://raw.githubusercontent.com/COANews/COANews.github.io/main/Logo.png">
 </head>
 <body>
 
