--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 
-<center>COA News</center>
+<h1 style="text-align:center">Center this text!</h1>
 <p>Stories Coming Soon</p>
 
 </body>
