--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 
-<h1 style="text-align:center">Center this text!</h1>
+<h1 style="text-align:center">COA News</h1>
 <p>Stories Coming Soon</p>
 
 </body>
