--- a/index.html
+++ b/index.html
@@ -3,6 +3,11 @@
 <head>
   <title>COA News</title>
   <link rel="icon" type="image/x-icon" href="https://raw.githubusercontent.com/COANews/COANews.github.io/main/Logo.png">
+<style>
+body {
+    font-family: 'League Spartan';font-size: 22px;
+}
+</style>
 </head>
 <body>
 
