--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <body>
 
 <h1 style="text-align:center">COA News</h1>
-<p>Stories Coming Soon</p>
+<p style="text-align:center">Stories Coming Soon</p>
 
 </body>
 </html>
