--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <body>
 
 <h1 style="text-align:center">COA News</h1>
-<p style="text-align:center">Website Soon</p>
+<p style="text-align:center"  target="_blank">Website Soon</p>
 <p><a href="https://twitter.com/CorpCOA">@CorpCOA</a></p>
 
 </body>
