--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
 <body>
 
 <h1 style="text-align:center">COA News</h1>
-<p style="text-align:center"  target="_blank">Website Soon</p>
-<p><a href="https://twitter.com/CorpCOA">@CorpCOA</a></p>
+<p style="text-align:center">Website Soon</p>
+<a href="https://twitter.com/CorpCOA" target="_blank">@CorpCOA</a> 
 
 </body>
 </html>
