--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
 <h1 style="text-align:center">COA News</h1>
 <p style="text-align:center">Website Soon</p>
-<a href="https://twitter.com/CorpCOA" target="_blank">@CorpCOA</a> 
+<a href="https://twitter.com/CorpCOA" target="_blank" style="text-align:center">@CorpCOA</a> 
 
 </body>
 </html>
